--- a/src/content/docs/homeworks/final project checkpoint 2.mdx
+++ b/src/content/docs/homeworks/final project checkpoint 2.mdx
@@ -21,7 +21,9 @@ TLDR: submit [this form](https://forms.gle/9vWfqfpUCJ4p9bBK7) before the deadlin
 
 For this deliverable you must describe, as precisely as possible, the specific architecture that your app will use. If you'll be using any particular framework, library, database, software as a service, etc, identify it and show where it fits into your overall architecture.
 
-I would gently suggest using excalidraw and providing a link to that diagram, but you don't need to if you feel you can adequately describe your architecture without it.
+You must also specifically describe the **minimum viable product** list of functionalities that you expect to have done by Checkpoint 3 (which will be due Friday, November 15th), which should be (a) a subset of your full project as described in checkpoint 1 and (b) should be chosen to exercise the most important parts of your architecture. In other words, don't get the front end and user authentication and profile pictures done but not (insert your app's unique interesting functionality) - make sure whatever makes your app unique is part of the minimum viable product. As always, post on Piazza or come to OH if you're having trouble deciding what to commit to finishing by checkpoint 3.
+
+When creating your architecture diagram, I suggest using excalidraw and providing a link to that diagram, but you don't need to if you feel you can adequately describe your architecture without it.
 
 
 ### What happens if you don't turn in the checkpoint?
