easier to find the readings from the homepage

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -11,10 +11,14 @@ hero:
     - text: Course Schedule
       link: /schedule/
       icon: information
-      variant: primary
+      variant: secondary
     - text: Syllabus
       link: /syllabus/
       icon: document
+      variant: secondary
+    - text: Read the book
+      link: /readings/
+      icon: open-book
       variant: primary
 ---
 
