--- a/src/content/docs/homeworks/homework 5.mdx
+++ b/src/content/docs/homeworks/homework 5.mdx
@@ -4,10 +4,13 @@ description: Optimization techniques in React
 due: "2024-12-06T14:00:00"
 release: "2024-11-25T08:00:00"
 extraCredit: "2024-12-04T14:00:00"
+notes: Watch [the kickoff video](https://youtu.be/mjxBT8jxRLM) for help getting started.
 ---
 
 import { localizeTime, formatTime } from "../../../utils.ts";
 import { Content as Deadlines } from "../../../components/Deadlines.md";
+import { Aside } from "@astrojs/starlight/components";
+import { marked } from "marked";
 
 **Due**: {formatTime(localizeTime(frontmatter.due))}
 
@@ -15,6 +18,10 @@ import { Content as Deadlines } from "../../../components/Deadlines.md";
 
 Create a new **private** repository under your own GitHub account
 from [this template](https://github.com/swad-cs-uic/homework5-f24).
+
+<Aside>
+  <Fragment set:html={marked(frontmatter.notes)} />
+</Aside>
 
 ## Installing required packages
 
