--- a/src/content/docs/homeworks/final project checkpoint 1.mdx
+++ b/src/content/docs/homeworks/final project checkpoint 1.mdx
@@ -17,18 +17,15 @@ relative_due:
 
 import { localizeTime, formatTime, calculateAbsoluteDate } from "../../../utils/dateUtils";
 import { Content as Deadlines } from "../../../components/Deadlines.md";
-import { DueDate } from "../../../components/DueDate";
+import DueDate from "../../../components/DueDate.astro";
 import { Aside } from "@astrojs/starlight/components"
 import {marked} from "marked"
 
-const dueDate = formatTime(localizeTime(calculateAbsoluteDate(frontmatter.relative_due)));
-const releaseDate = formatTime(localizeTime(calculateAbsoluteDate(frontmatter.relative_release)));
-
 ## {frontmatter.description}
 
-**Due**: {dueDate}
+**Due:** <DueDate relativeDate={frontmatter.relative_due} />
 
-**Release**: {releaseDate}
+**Release:** <DueDate relativeDate={frontmatter.relative_release}  />
 
 TLDR: submit [this form](https://forms.gle/FySzRBae1QJhUCs97) before the deadline.
 
@@ -109,6 +106,3 @@ think a good project is expected to do - you could receive full points because
 what you did was actually fine, or you could receive zero points because you're
 not implementing what I expected you'd implement. It's highly recommended you do
 the work to prepare and submit this checkpoint.
-
-<DueDate relativeDate={frontmatter.relative_due} />
-<DueDate relativeDate={frontmatter.relative_release} label="Release" />
