--- a/src/content/docs/homeworks/homework 4.mdx
+++ b/src/content/docs/homeworks/homework 4.mdx
@@ -17,12 +17,13 @@ relative_due:
 ---
 
 import { Content as Deadlines } from "../../../components/Deadlines.md";
-import { DueDate } from "../../../components/DueDate";
+import DueDate from "../../../components/DueDate.astro";
 import { Aside } from "@astrojs/starlight/components";
 import { marked } from "marked";
 
-<DueDate relativeDate={frontmatter.relative_due} />
-<DueDate relativeDate={frontmatter.relative_release} label="Release" />
+**Due:** <DueDate relativeDate={frontmatter.relative_due} />
+
+**Release:** <DueDate relativeDate={frontmatter.relative_release} />
 
 # {frontmatter.description}
 
@@ -131,7 +132,7 @@ Your full score can be computed as:
 
 ## Due date
 
-This homework is due on {formatTime(localizeTime(frontmatter.due))} This deadline is
+This homework is due on <DueDate relativeDate={frontmatter.relative_due} />. This deadline is
 FIRM. This assignment is easier than all of the rest, so please put some time in
 and finish it before the deadline, so you have more time to work on your final
 project.
