--- a/src/content/docs/homeworks/homework 1.mdx
+++ b/src/content/docs/homeworks/homework 1.mdx
@@ -17,16 +17,13 @@ relative_due:
 ---
 
 import { Content as Deadlines } from "../../../components/Deadlines.md";
-import { DueDate } from "../../../components/DueDate";
+import DueDate from "../../../components/DueDate.astro";
 import { Aside } from "@astrojs/starlight/components";
 import { marked } from "marked";
 
-<DueDate relativeDate={frontmatter.relative_due} />
-<DueDate relativeDate={frontmatter.relative_release} label="Release" />
+**Due:** <DueDate relativeDate={frontmatter.relative_due} />
 
-**Due**: {dueDate}
-
-**Release**: {releaseDate}
+**Release:** <DueDate relativeDate={frontmatter.relative_release}  />
 
 **Quickstart** Create a new **private** repository under your own GitHub account
 from [this template](https://github.com/swad-cs-uic/homework1-f24). Sharing your
@@ -151,6 +148,6 @@ submissions.**
 
 ## Due Date
 
-This assignment is due at{formatTime(localizeTime(frontmatter.due))}. Extra
+This assignment is due at <DueDate relativeDate={frontmatter.relative_due} />. Extra
 credit in the course is available for anyone who writes meaningful test cases
 and submits them to the TA by Sunday, September 3rd.
