--- a/src/content/docs/homeworks/homework 3.mdx
+++ b/src/content/docs/homeworks/homework 3.mdx
@@ -17,20 +17,14 @@ relative_due:
 
 import { localizeTime, formatTime, calculateAbsoluteDate } from "../../../utils/dateUtils";
 import { Content as Deadlines } from "../../../components/Deadlines.md";
-import { DueDate } from "../../../components/DueDate";
+import DueDate from "../../../components/DueDate.astro";
 
 import { Aside } from "@astrojs/starlight/components"
 import {marked} from "marked"
 
-const dueDate = formatTime(localizeTime(calculateAbsoluteDate(frontmatter.relative_due)));
-const releaseDate = formatTime(localizeTime(calculateAbsoluteDate(frontmatter.relative_release)));
+**Due:** <DueDate relativeDate={frontmatter.relative_due} />
 
-<DueDate relativeDate={frontmatter.relative_due} />
-<DueDate relativeDate={frontmatter.relative_release} label="Release" />
-
-**Due**: {dueDate}
-
-**Release**: {releaseDate}
+**Release:** <DueDate relativeDate={frontmatter.relative_release} />
 
 ## Quickstart
 
