--- a/src/content/docs/homeworks/final final project.mdx
+++ b/src/content/docs/homeworks/final final project.mdx
@@ -26,7 +26,7 @@ import {marked} from "marked"
 
 **Due:** <DueDate relativeDate={frontmatter.relative_due} />
 
-**Release:** <DueDate relativeDate={frontmatter.relative_release} label="Release" />
+**Release:** <DueDate relativeDate={frontmatter.relative_release}  />
 
 TLDR: submit [this form](https://forms.gle/n9cdZMK8C24wprqC6) before the deadline.
 
