--- a/src/content/docs/homeworks/homework 3.mdx
+++ b/src/content/docs/homeworks/homework 3.mdx
@@ -7,11 +7,11 @@ sidebar:
   order: 32
 relative_release:
   week: 8
-  day: 0
+  day: Wednesday
   time: '08:00:00'
 relative_due:
   week: 10
-  day: 0
+  day: Friday
   time: '14:00:00'
 ---
 
