--- a/src/content/docs/homeworks/homework 5.mdx
+++ b/src/content/docs/homeworks/homework 5.mdx
@@ -9,11 +9,11 @@ notes: >-
   started.
 relative_release:
   week: 13
-  day: 0
+  day: Monday
   time: '08:00:00'
 relative_due:
   week: 14
-  day: 0
+  day: Friday
   time: '14:00:00'
 ---
 
