--- a/src/content/docs/homeworks/final project proposal.mdx
+++ b/src/content/docs/homeworks/final project proposal.mdx
@@ -13,21 +13,19 @@ relative_release:
 relative_due:
   week: 3
   day: 2
-  time: '14:00:00'
 ---
 
 import { localizeTime, formatTime, calculateAbsoluteDate } from "../../../utils/dateUtils";
 import { Content as Deadlines } from "../../../components/Deadlines.md";
 import DueDate from "../../../components/DueDate.astro";
 import { Aside } from "@astrojs/starlight/components"
-import {marked} from "marked"
+import { marked } from "marked"
 
 ## {frontmatter.description}
 
-**Due:** <DueDate relativeDate={frontmatter.relative_due} />   
+**Release:** <DueDate relativeDate={frontmatter.relative_release}  />
 
-**Released:** <DueDate relativeDate={frontmatter.relative_release}  />   
-
+**Due:** <DueDate relativeDate={frontmatter.relative_due} />
 
 This is the first checkpoint for your final project. The most important things you must do before turning it in are:
 
@@ -149,5 +147,3 @@ think a good project is expected to do - you could receive full points because
 what you did was actually fine, or you could receive zero points because you're
 implementing a CRUD app or what you chose isn't substantial enough or what you
 chose is a carbon copy of something else that exists out in the world.
-<DueDate relativeDate={frontmatter.relative_due} />
-<DueDate relativeDate={frontmatter.relative_release} label="Release" />
