Add tentative field to all homework documents for clarity

--- a/src/content/docs/homeworks/final project MVP.mdx
+++ b/src/content/docs/homeworks/final project MVP.mdx
@@ -1,4 +1,5 @@
 ---
+tentative: true
 title: Final Project MVP
 description: Make your app do the most basic version of what you want it to do
 sidebar:
