--- a/src/content/docs/homeworks/final project proposal.mdx
+++ b/src/content/docs/homeworks/final project proposal.mdx
@@ -1,4 +1,5 @@
 ---
+tentative: true
 title: Final Project checkpoint 0
 description: Form a group and come up with an idea
 form_url: https://forms.gle/8GUcdZcUf9jrcX6W9
