--- a/src/content/docs/homeworks/homework 5.mdx
+++ b/src/content/docs/homeworks/homework 5.mdx
@@ -1,4 +1,5 @@
 ---
+tentative: true
 title: 'Homework 5: Optimization'
 description: Optimization techniques in React
 extraCredit: '2024-12-04T14:00:00'
