too much to say

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -37,9 +37,8 @@ import { courseConfig } from "../../courseConfig";
     title={`Interested in registering for ${courseConfig.courseName} in ${courseConfig.semester}?`}
   >
     If you're interested in registering for this class, you must have turned in
-    the first assignment due on the Thursday of week 2. If you did and aren't in
-    the class yet, please follow the instructions mentioned in class and on
-    Piazza.
+    the first assignment due on the Friday of week 1. Anyone can turn this assignment in regardless of whether they are registered for the course: if you did and aren't in
+    the class yet,  follow the instructions on the [homework 0](/homeworks/homework-0/) page to turn in the assignment. 
   </Aside>
 )}
 
