--- a/src/content/docs/homeworks/homework 2.mdx
+++ b/src/content/docs/homeworks/homework 2.mdx
@@ -8,8 +8,8 @@ notes: >-
   Watch [the kickoff video](https://youtu.be/0QKOuPO_SAI) for help getting
   started.
 relative_release:
-  week: 5
-  day: 1
+  week: 4
+  day: Monday
   time: '08:00:00'
 relative_due:
   week: 6
@@ -100,4 +100,3 @@ machine" does not count as a valid excuse for failing tests in the autograder. *
 ## Due date
 
 This assignment is due at <DueDate relativeDate={frontmatter.relative_due} />.
-
