no markdown in components booooo

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -38,7 +38,7 @@ import { courseConfig } from "../../courseConfig";
   >
     If you're interested in registering for this class, you must have turned in
     the first assignment due on the Friday of week 1. Anyone can turn this assignment in regardless of whether they are registered for the course: if you did and aren't in
-    the class yet,  follow the instructions on the [homework 0](/homeworks/homework-0/) page to turn in the assignment. 
+    the class yet,  follow the instructions on the <a href="/homeworks/homework-0/">homework 0</a> page to turn in the assignment. 
   </Aside>
 )}
 
