--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -56,20 +56,16 @@ import { courseConfig } from "../../courseConfig";
 **Course Modality and Schedule**:
 This course is taught in person, location LC C6, 2:00pm - 3:15pm Tuesdays and Thursdays. Please bring your laptop (with battery if our classroom doesn't have plugs) for in-class activities.
 
-**Piazza**: https://piazza.com/uic/fall2024/cs484
+**Piazza**: <https://piazza.com/uic/fall2025/cs484> (this is open to all UIC CS students during the first two weeks of class - if you are not in the class and want to be allowed in off of the waitlist, please join to get the Gradescope invite code to turn in hw0)
 
-**Gradescope**: https://www.gradescope.com/courses/833367 (Check Piazza for the invite code)
+**Gradescope**: <https://www.gradescope.com/courses/1073379> (Check Piazza for the invite code)
 
 ### Instructional Team
 
 Chris Kanich, ckanich@uic.edu  
 Drop-In Office Hours: 3:30-4:30pm Tuesdays and Wednesdays  
-Drop-In Hours location: SEO 908
+Drop-In Hours location: CDRLC 4411  
 
-Graduate TA: Khanh Le, nle33@uic.edu  
-Drop-In Office Hours: 11:00-12:00pm Mondays and Wednesdays  
-Drop-In Hours location: CS Lounge and [Zoom](https://uic.zoom.us/j/83302203414?pwd=yrWtdLS8aRlH0Dfw6bL4Sf4OjZGSHa.1)
-
-Graduate TA: Claudio Paloscia, cpalos2@uic.edu  
-Drop-In Office Hours: 10:00-11:00am Thursdays  
-Drop-In Hours location: CS Lounge
+Graduate TA: TBD  
+Drop-In Office Hours: TBD  
+Drop-In Hours location: TBD
