office hours, group size

--- a/src/content/docs/homeworks/final project proposal.mdx
+++ b/src/content/docs/homeworks/final project proposal.mdx
@@ -60,20 +60,6 @@ you spend on this now, the higher likelihood that you come up with something
 fun, and the higher likelihood that you actually are motivated to work on
 finishing the project later on in the semester when things are getting busy.
 
-### The difficulty of implementation must be proportional to the number of people in your group
-
-This is also a very vague but important requirement - the amount of complexity
-should be roughly proportional to the number of people in your group, with the
-excpetion that if you're a group of one, I'll expect you to do the work of a
-group of two. There might also be extra credit later on that is only available
-for groups of two or more students.
-
-The best way to determine whether your idea is "substantial" enough is to ask
-me, via Piazza or via office hours. I will provide feedback on your project idea
-after this deadline is over to let you know where you're at on the "substantial"
-scale, and recommend changes to your project plan if what you've come up with is
-either too big or too small.
-
 ## Project inspiration
 
 If you're having trouble coming up with a project idea, here are some things
@@ -96,8 +82,9 @@ that aren't TOO hard but will end up being impressive if you do them correctly:
 * Something that uses a lot of data - if you're interested in data science or AI
   or just want to learn more about how to work with data, there are a lot of
   public datasets available that you can use to build a cool project. You can
-  also scrape them (like the Costco discount tracker project example), but be
-  aware that sometimes that can take longer than you would expect to get right.
+  also collect them "live" (for instance, using a feed of Bluesky posts), but be
+  aware that sometimes that can take longer than you would expect to get right,
+  and there are a lot of uncensored data feeds on the Internet.
 
 
 
@@ -137,6 +124,11 @@ will be grading your later checkpoints based on my personal opinion rather than
 the expectations that we set together.
 
 ### What happens if you don't turn in the checkpoint?
+
+This checkpoint is worth zero points, so not submitting it will not negatively
+impact your grade. Groups are required to be 4 students. If you do not submit
+the form with a group of four students, the course staff will allocate you to a
+group with three other students who also didn't submit the form.
 
 Nothing besides the MVP (due in week 12) and the final project (due at the end
 of week 15) are graded for points. The things that you propose in each
