no longer new this year

--- a/src/content/docs/homeworks/homework 0.mdx
+++ b/src/content/docs/homeworks/homework 0.mdx
@@ -41,7 +41,7 @@ for all to see. The coding part is dead simple - you just have to change the
 text in a few files. The more important part is getting your tools set up for
 _Continuous Integration_ and _Continuous Deployment_.
 
-### New this year: Unix-based development environment required
+### Unix-based development environment required
 
 One of the awesome things about web development is that on the server side and
 the client side, it's pretty cross-platform. However, once you get into more
